--- a/client-app/index.html
+++ b/client-app/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JSBridge Client 客户端</title>
+    <script src="/dev/vconsole.min.js"></script>
+    <script>
+      new VConsole();
+    </script>
   </head>
   <body>
     <div id="root"></div>
